<resources>
    <string name="app_name">JobDPS</string>
    <string name="page_title">JobDPS</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="content_description_profile">Your profile</string>
    <string name="content_description_more">More options</string>

    <string name="nav_header_title">JobDPS</string>
    <string name="nav_title_1">Home</string>
    <string name="nav_title_2">Explore</string>
    <string name="nav_title_3">Discuss</string>
    <string name="nav_title_4">Plan</string>
    <string name="nav_title_5">Schedule</string>
    <string name="nav_title_6">Companies</string>

    <string name="openNavDrawer">Nav Drawer Open</string>
    <string name="closeNavDrawer">Nav Drawer Closed</string>

    <string name="home_fragment">Home fragment</string>
    <string name="explore_fragment">Explore fragment</string>

    <string name="landing_header">Tired of using spreadsheets?</string>
    <string name="landing_subtext">JobDPS is the multiplatform tool to help discuss, plan,
                                    and schedule everything involved in your job search - without a messy spreadsheet.</string>
    <string name="landing_button">GET STARTED</string>
</resources>