<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/home_icon_24dp"
            android:title="@string/nav_title_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/discuss_icon_24dp"
            android:title="@string/nav_title_3" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/note_icon_24dp"
            android:title="@string/nav_title_4" />
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/calendar_icon_24dp"
            android:title="@string/nav_title_5" />
        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/apartment_icon_24dp"
            android:title="@string/nav_title_6" />
    </group>
</menu>