<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cLayout"

        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/abLayout"
            android:fitsSystemWindows="true"
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/menu_icon_36dp"
                app:title="@string/page_title"
                style="@style/Widget.MaterialComponents.Toolbar.Primary" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="?attr/actionBarSize"
            android:background="@color/landingBackground"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/landing_header"
                android:textColor="@color/white"
                android:textSize="64sp"
                android:paddingBottom="32dp"
                android:paddingHorizontal="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/landing_subtext"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:paddingHorizontal="5dp"
                android:paddingBottom="32dp"/>
            <Button
                android:id="@+id/landing_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/landing_button"
                android:textSize="32sp"
                android:minHeight="84dp"
                android:minWidth="300dp"/>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_drawer"
        app:headerLayout="@layout/header_navigation_drawer"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>
